--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_database: ^10.0.7
   cloud_firestore: ^4.2.0
 
+  firebase_storage: ^11.0.9
+  image_picker: ^0.8.6
+
 
 dev_dependencies:
   flutter_test:
