--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.2.0
   firebase_storage: ^11.0.9
   image_picker: ^0.8.6
+  provider: ^6.0.5
 
 
 dev_dependencies:
