--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,13 @@ dependencies:
   firebase_auth: ^4.2.0
   firebase_database: ^10.0.7
   cloud_firestore: ^4.2.0
+  firebase_storage: ^11.0.10
+  provider: ^6.0.5
+  image_picker: ^0.8.6
+
+  flutter_local_notifications: ^13.0.0
+  path_provider: ^2.0.11
+
 
 
 dev_dependencies:
