--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   image_picker: ^0.8.6
   provider: ^6.0.5
   flutter_local_notifications: ^13.0.0
-
+  # 4 jan
+  path_provider: ^2.0.11
+  http: ^0.13.5
+  firebase_messaging: ^14.2.1
 
 dev_dependencies:
   flutter_test:
