--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   path_provider: ^2.0.11
 
+  firebase_messaging: ^14.2.1
+  http: ^0.13.5
+
 
 
 dev_dependencies:
