--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   http: ^0.13.5
   firebase_messaging: ^14.2.1
 
+  fake_cloud_firestore: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
